# rsx

./: .clippy.toml  .env.example  .gitignore  AGENTS.md  ALIGN.md  ARCHITECTURE.md  BLOG.md  BUGS.md  CHANGELOG.md  CLAUDE.md  CONSISTENCY.md  CRASH-SCENARIOS.md  CRITIQUE.md  Cargo.toml  DEFICIENCIES.md  DOCS-CLEANUP-PLAN.md  DOCS-EXECUTION-CHECKLIST.md  DOCS-MANIFEST.md  DOCS-QUICK-REFERENCE.md  DOCS-SUMMARY.md  DOCUMENTATION.md  FEATURES.md  FRONTEND.md  FUTURE.md  GUARANTEES.md  KNOWLEDGE.md  LEFTOSPEC.md  LOG.md  MONITORING.md  Makefile  NAMING.md  NETWORK.md  ONEPAGER.md  ORDERBOOK.md  ORDERBOOKv2.md  PLAN.md  PLAYGROUND-STATUS.md  PLAYWRIGHT_TESTS_SUMMARY.md  PROGRESS.md  PROGRESS.md.old  (+29 more)
rsx-auth/: .gitignore  README.md  pyproject.toml
rsx-auth/tests/: app_test.py  jwt_test.py
rsx-book/: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  WHY.md
rsx-book/benches/: book_bench.rs  compare_all_bench.rs  compare_naive_bench.rs  deep_book_bench.rs  distribution_bench.rs  harness.rs  tail_bench.rs
rsx-book/compare/: README.md  cross-language-cited.md  hftbacktest.md  lob.md  naive-btree.md  orderbook-inv2004.md  orderbook-rs.md
rsx-book/demo/: CLAUDE.md  Makefile  architecture.md  bench-live.sh  book-live.cast  reveal.sh
rsx-book/examples/: book_smoke.rs
rsx-book/notes/: README.md  align.md  arena.md  occupancy.md
rsx-book/src/: book.rs  compression.rs  event.rs  level.rs  lib.rs  matching.rs  migration.rs  occupancy.rs  occupancy_test.rs  order.rs  slab.rs  snapshot.rs  user.rs  user_test.rs
rsx-book/tests/: book_test.rs  compression_test.rs  config_test.rs  config_update_test.rs  distribution_test.rs  fok_liquidity_test.rs  level_test.rs  matching_test.rs  migration_test.rs  mixed_slot_test.rs  modify_test.rs  order_test.rs  post_only_test.rs  recenter_wiring_test.rs  recentering_test.rs  reclamation_test.rs  scan_reference_test.rs  slab_test.rs  snapshot_test.rs  struct_layout_test.rs
rsx-cli/: ARCHITECTURE.md  Cargo.toml  README.md
rsx-cli/notes/: README.md
rsx-cli/src/: bench_probe.rs  main.rs
rsx-cli/tests/: cli_test.rs
rsx-dxs/: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  bench_report  build.rs
rsx-dxs/benches/: cmp_bench.rs  cmp_one_way_bench.rs  cmp_rtt_bench.rs  cmp_send_breakdown_bench.rs  compare_aeron.rs  compare_all.rs  compare_kcp.rs  compare_quinn.rs  compare_tcp.rs  compare_udp.rs  encode_bench.rs  udp_rtt_bench.rs  wal_bench.rs  wal_fsync_bench.rs  wal_random_read_bench.rs
rsx-dxs/compare/: README.md  aeron.md  chronicle-queue.md  compare_all.rs  compare_kcp.rs  compare_quinn.rs  itch5.md  kcp.md  lbm.md  moldudp64.md  ouch.md  quinn.md  raw-udp.md  tcp.md
rsx-dxs/examples/: cmp_smoke.rs
rsx-dxs/facts/: syscall-latency.md
rsx-dxs/fuzz/: Cargo.toml
rsx-dxs/proto/: dxs.proto
rsx-dxs/specs/: 4-cmp.md
rsx-dxs/src/: client.rs  cmp.rs  config.rs  encode_utils.rs  header.rs  lib.rs  protocol.rs  records.rs  server.rs  tls.rs  wal.rs
rsx-dxs/tests/: client_test.rs  cmp_encoding_test.rs  cmp_test.rs  cmp_v4_test.rs  header_test.rs  nak_fallback_latency_test.rs  records_test.rs  sustained_throughput_test.rs  tls_test.rs  wal_test.rs
rsx-gateway/: ARCHITECTURE.md  Cargo.toml  README.md
rsx-gateway/benches/: gateway_bench.rs  jti_tracker_bench.rs  jwt_validate_bench.rs  ws_encode_bench.rs  ws_order_latency.rs  ws_parse_bench.rs
rsx-gateway/compare/: README.md
rsx-gateway/notes/: io-model.md
rsx-gateway/src/: circuit.rs  config.rs  convert.rs  egress.rs  egress_test.rs  handler.rs  jwt.rs  lib.rs  main.rs  order_id.rs  pending.rs  protocol.rs  rate_limit.rs  records.rs  replay.rs  rest.rs  route.rs  state.rs  types.rs  ws.rs
rsx-gateway/tests/: circuit_test.rs  config_test.rs  convert_test.rs  heartbeat_test.rs  jwt_test.rs  jwt_ws_e2e_test.rs  order_id_test.rs  order_lifecycle_test.rs  pending_test.rs  prevalidation_test.rs  protocol_test.rs  rate_limit_e2e_test.rs  rate_limit_test.rs  records_test.rs  replay_drain_test.rs  rest_contract_test.rs  state_test.rs  stream_ordering_test.rs  types_test.rs
rsx-health/: ARCHITECTURE.md  Cargo.toml  README.md
rsx-health/src/: lib.rs
rsx-log/: ARCHITECTURE.md  Cargo.toml  README.md
rsx-log/src/: lib.rs
rsx-mark/: ARCHITECTURE.md  Cargo.toml  README.md
rsx-mark/benches/: aggregator_bench.rs  mark_bench.rs
rsx-mark/src/: aggregator.rs  config.rs  lib.rs  main.rs  source.rs  source_test.rs  types.rs
rsx-mark/tests/: aggregator_test.rs  config_test.rs  types_test.rs
rsx-marketdata/: ARCHITECTURE.md  Cargo.toml  README.md  marketdata.proto
rsx-marketdata/benches/: marketdata_bench.rs  shadow_book_apply_bench.rs
rsx-marketdata/compare/: README.md
rsx-marketdata/src/: config.rs  egress.rs  egress_test.rs  handler.rs  lib.rs  main.rs  protocol.rs  records.rs  replay.rs  shadow.rs  state.rs  subscription.rs  types.rs  wire.rs  wire_test.rs  ws.rs
rsx-marketdata/tests/: config_test.rs  event_routing_test.rs  heartbeat_test.rs  me_cast_addrs_test.rs  me_cmp_addrs_test.rs  multi_me_aggregation_test.rs  protocol_test.rs  records_test.rs  replay_drain_test.rs  replay_e2e_test.rs  replay_test.rs  seq_gap_test.rs  shadow_test.rs  snapshot_consistency_test.rs  state_resync_test.rs  subscription_test.rs
rsx-matching/: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
rsx-matching/benches/: harness.rs  match_by_type_bench.rs  match_depth_bench.rs  (+4 more)
rsx-messages/: ARCHITECTURE.md  Cargo.toml  README.md
rsx-playground/: .env.example  AUDIT.md  CLAUDE.md  DOD.md  FIXES-APPLIED.md  LOG.md  PROGRESS.md  QUICK-REF.md  README.md  STRESS-FEATURE.md  SUMMARY.md  TEST-PLAN.md  cast_demo.py  market_maker.py  md_wire.py  pages.py  playground  pyproject.toml  requirements.txt  runtime.py  server.py  setup.sh  stress.py  stress_client.py  terminal.py  terminal_page.py  test_routes.py
rsx-recorder/: ARCHITECTURE.md  Cargo.toml  README.md  recorder.toml.example
rsx-risk/: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md
rsx-stress/: Cargo.toml  README.md
rsx-tui/: ARCHITECTURE.md  Cargo.toml  README.md
rsx-types/: ARCHITECTURE.md  Cargo.toml  README.md
(+1111 files in other folders)
