[workspace]
members = [
    "rsx-types",
    "rsx-book",
    "rsx-matching",
    "rsx-dxs",
    "rsx-recorder",
    "rsx-risk",
    "rsx-mark",
    "rsx-gateway",
    "rsx-marketdata",
    "rsx-cli",
    "rsx-maker",
    "rsx-sim",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
