[workspace]
members = [
    "rsx-types",
    "rsx-book",
    "rsx-matching",
    "rsx-cast",
    "rsx-recorder",
    "rsx-risk",
    "rsx-mark",
    "rsx-gateway",
    "rsx-marketdata",
    "rsx-cli",
    "rsx-log",
    "rsx-messages",
    "rsx-health",
    "rsx-tui",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"
lto = false
codegen-units = 16

[profile.dev]
opt-level = 0
debug = true
