[package]
name = "rsx-book"
version = "0.2.0"
edition = "2021"
description = "Depth-invariant fixed-point limit-order book + matching engine: compression-mapped levels, slab arena, occupancy bitmap. Zero heap on the hot path, no floats."
repository = "https://github.com/kronael/rsx"
license = "MIT OR Apache-2.0"
keywords = ["orderbook", "matching-engine", "exchange", "low-latency", "fixed-point"]
categories = ["data-structures", "finance"]
readme = "README.md"
# harness.rs is a shared module (#[path] include), not a bench target;
# disable auto-discovery so only the explicit [[bench]] entries build.
autobenches = false

[dependencies]
rsx-types = { path = "../rsx-types" }
rustc-hash = "2"
tracing = "0.1"

[dev-dependencies]
criterion = "0.5"
core_affinity = "0.8"
# Scoped dev-only dep for compare/hftbacktest.md cross-match bench.
# Never used by rsx-book's own lib code (frozen-adjacent graph untouched).
# default-features off: skips "live" (tokio/iceoryx2/chrono/...);
# "backtest" is required because depth/*.rs imports
# crate::backtest::BacktestError unconditionally.
hftbacktest = { version = "0.9.4", default-features = false, features = ["backtest"] }
# Scoped dev-only dep for compare/lob.md cross-match row in
# compare_all_bench.rs. crates.io Rust orderbook implementation.
lob = "0.1.0"

[[bench]]
name = "book_bench"
harness = false

[[bench]]
name = "deep_book_bench"
harness = false

[[bench]]
name = "compare_naive_bench"
harness = false

[[bench]]
name = "compare_all_bench"
harness = false

[[bench]]
name = "distribution_bench"
harness = false
