[package]
name = "rsx-cli"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "rsx-cli"
path = "src/main.rs"

[[bin]]
name = "bench-probe"
path = "src/bench_probe.rs"

[[bin]]
name = "bench-e2e-pipeline"
path = "src/bin/bench_e2e_pipeline.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
rsx-dxs = { path = "../rsx-dxs" }
rsx-messages = { path = "../rsx-messages" }
rsx-book = { path = "../rsx-book" }
rsx-matching = { path = "../rsx-matching" }
rsx-types = { path = "../rsx-types" }
rustc-hash = "2"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "net", "time", "io-util"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
