[package]
name = "rsx-cli"
version = "0.2.0"
edition = "2021"
default-run = "rsx-cli"

[[bin]]
name = "rsx-cli"
path = "src/main.rs"

[[bin]]
name = "bench-probe"
path = "src/bench_probe.rs"

[[bin]]
name = "bench-match-rt"
path = "src/bin/bench_match_rt.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
rsx-cast = { path = "../rsx-cast" }
rsx-messages = { path = "../rsx-messages" }
rsx-book = { path = "../rsx-book" }
rsx-matching = { path = "../rsx-matching" }
rsx-types = { path = "../rsx-types" }
rustc-hash = "2"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "net", "time", "io-util"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
