[package]
name = "rsx-dxs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-pemfile = "2"
webpki-roots = "0.26"
crc32fast = "1.4"
bytes = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
rsx-types = { path = "../rsx-types" }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
rcgen = "0.13"

[[bin]]
name = "rsx-wal-dump"
path = "src/bin/wal_dump.rs"

[[bench]]
name = "wal_bench"
harness = false

[[bench]]
name = "encode_bench"
harness = false
