[package]
name = "rsx-dxs"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-pemfile = "2"
webpki-roots = "0.26"
crc32fast = "1.4"
bytes = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
socket2 = { version = "0.5", features = ["all"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
rcgen = "0.13"
rsx-messages = { path = "../rsx-messages" }
rsx-types = { path = "../rsx-types" }

[[bench]]
name = "wal_bench"
harness = false

[[bench]]
name = "cmp_bench"
harness = false

[[bench]]
name = "udp_rtt_bench"
harness = false

[[bench]]
name = "cmp_one_way_bench"
harness = false

[[bench]]
name = "cmp_rtt_bench"
harness = false

[[bench]]
name = "wal_fsync_bench"
harness = false

[[bench]]
name = "wal_random_read_bench"
harness = false

[[bench]]
name = "cmp_send_breakdown_bench"
harness = false

