[package]
name = "rsx-dxs"
version = "0.2.0"
edition = "2021"
description = "Log-backed reliable UDP (CMP) + TCP replay (DXS) for fixed-format binary records. Wire = disk = stream."
repository = "https://github.com/kronael/rsx"
license = "MIT OR Apache-2.0"
keywords = ["wal", "udp", "reliable", "transport", "low-latency"]
categories = ["network-programming", "data-structures"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
rustls-pemfile = "2"
webpki-roots = "0.26"
crc32fast = "1.4"
bytes = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
socket2 = { version = "0.5", features = ["all"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
rcgen = "0.13"
rsx-messages = { path = "../rsx-messages" }
rsx-types = { path = "../rsx-types" }
# protocol comparison benches (compare/*)
kcp = "0.6"
quinn = "0.11"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
# Aeron: precompile+static avoids cmake 3.30+ requirement (Debian 12 has 3.25)
# and downloads prebuilt C driver instead of building from source.
rusteron-client = { version = "0.1.163", default-features = false, features = ["precompile", "static"] }
rusteron-media-driver = { version = "0.1.163", default-features = false, features = ["precompile", "static"] }

[[bench]]
name = "wal_bench"
harness = false

[[bench]]
name = "cmp_bench"
harness = false

[[bench]]
name = "compare_udp"
harness = false

[[bench]]
name = "cmp_one_way_bench"
harness = false

[[bench]]
name = "cmp_rtt_bench"
harness = false

[[bench]]
name = "wal_fsync_bench"
harness = false

[[bench]]
name = "wal_random_read_bench"
harness = false

[[bench]]
name = "cmp_send_breakdown_bench"
harness = false

[[bench]]
name = "compare_kcp"
path = "compare/compare_kcp.rs"
harness = false

[[bench]]
name = "compare_quinn"
path = "compare/compare_quinn.rs"
harness = false

[[bench]]
name = "compare_all"
path = "compare/compare_all.rs"
harness = false

[[bench]]
name = "compare_tcp"
harness = false

[[bench]]
name = "compare_aeron"
harness = false

[[bench]]
name = "compare_moldudp64"
harness = false

[[bench]]
name = "compare_soupbintcp"
harness = false
