[package]
name = "rsx-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rsx-gateway"
path = "src/main.rs"

[lib]
name = "rsx_gateway"
path = "src/lib.rs"

[dependencies]
rsx-types = { path = "../rsx-types" }
rsx-dxs = { path = "../rsx-dxs" }
rsx-risk = { path = "../rsx-risk" }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
monoio = "0.2"
sha1 = "0.10"
base64 = "0.22"
rustc-hash = "2"

[dev-dependencies]
