[package]
name = "rsx-gateway"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "rsx-gateway"
path = "src/main.rs"

[lib]
name = "rsx_gateway"
path = "src/lib.rs"

[dependencies]
rsx-types = { path = "../rsx-types" }
rsx-log = { path = "../rsx-log" }
rsx-cast = { path = "../rsx-cast" }
rsx-messages = { path = "../rsx-messages" }
rsx-risk = { path = "../rsx-risk" }
rsx-health = { path = "../rsx-health" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }
monoio = "0.2"
tokio = { version = "1", features = ["rt", "macros", "io-util", "net", "time"] }
sha1 = "0.10"
base64 = "0.22"
rustc-hash = "2"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }

[features]
# Compile in the per-stage latency trace (latency_sample! macro). Off by
# default = zero hot-path cost. Build with --features latency-trace to profile.
latency-trace = []

[[bench]]
name = "gateway_bench"
harness = false

[[bench]]
name = "ws_parse_bench"
harness = false

[[bench]]
name = "ws_encode_bench"
harness = false

[[bench]]
name = "jwt_validate_bench"
harness = false

[[bench]]
name = "jti_tracker_bench"
harness = false

[[bench]]
name = "ws_order_latency"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
jsonwebtoken = "9"
tempfile = "3"
