[package]
name = "rsx-log"
version = "0.2.0"
edition = "2021"
description = "Off-hot-path logging primitive: per-thread wait-free SPSC ring drained to tracing events. ~20-30 ns push, zero cost when disabled."
repository = "https://github.com/kronael/rsx"
license = "MIT OR Apache-2.0"
keywords = ["logging", "spsc", "low-latency", "tracing", "lock-free"]
categories = ["development-tools::debugging", "concurrency"]
readme = "README.md"
publish = false

[dependencies]
rtrb = "0.3"
tracing = "0.1"
