[package]
name = "rsx-mark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rsx-mark"
path = "src/main.rs"

[lib]
name = "rsx_mark"
path = "src/lib.rs"

[dependencies]
rsx-types = { path = "../rsx-types" }
rsx-dxs = { path = "../rsx-dxs" }
tracing = "0.1"
tracing-subscriber = "0.3"
rtrb = "0.3"

[dev-dependencies]
