[package]
name = "rsx-mark"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rsx-mark"
path = "src/main.rs"

[lib]
name = "rsx_mark"
path = "src/lib.rs"

[dependencies]
rsx-types = { path = "../rsx-types" }
rsx-dxs = { path = "../rsx-dxs" }
tracing = "0.1"
tracing-subscriber = "0.3"
rtrb = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "mark_bench"
harness = false
