[package]
name = "rsx-marketdata"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rsx-marketdata"
path = "src/main.rs"

[lib]
name = "rsx_marketdata"
path = "src/lib.rs"

[dependencies]
rsx-types = { path = "../rsx-types" }
rsx-book = { path = "../rsx-book" }
rsx-dxs = { path = "../rsx-dxs" }
monoio = "0.2"
tokio = { version = "1", features = ["rt", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
sha1 = "0.10"
base64 = "0.21"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "marketdata_bench"
harness = false
