[package]
name = "rsx-marketdata"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "rsx-marketdata"
path = "src/main.rs"

[lib]
name = "rsx_marketdata"
path = "src/lib.rs"

[dependencies]
rsx-types = { path = "../rsx-types" }
rsx-book = { path = "../rsx-book" }
rsx-cast = { path = "../rsx-cast" }
rsx-messages = { path = "../rsx-messages" }
rsx-log = { path = "../rsx-log" }
rsx-health = { path = "../rsx-health" }
monoio = "0.2"
tokio = { version = "1", features = ["rt", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1"
prost = "0.14"
sha1 = "0.10"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
rcgen = "0.13"
rustls = { version = "0.23", features = ["aws-lc-rs"] }

[[bench]]
name = "marketdata_bench"
harness = false

[[bench]]
name = "shadow_book_apply_bench"
harness = false
