[package]
name = "rsx-matching"
version = "0.1.0"
edition = "2021"

[dependencies]
rsx-types = { path = "../rsx-types" }
rsx-book = { path = "../rsx-book" }
rsx-dxs = { path = "../rsx-dxs" }
core_affinity = "0.8"
rustc-hash = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-postgres = "0.7"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }

[[bench]]
name = "matching_bench"
harness = false
