[package]
name = "rsx-matching"
version = "0.2.0"
edition = "2021"

[dependencies]
rsx-types = { path = "../rsx-types" }
rsx-log = { path = "../rsx-log" }
rsx-book = { path = "../rsx-book" }
rsx-cast = { path = "../rsx-cast" }
rsx-messages = { path = "../rsx-messages" }
rustc-hash = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-postgres = "0.7"
libc = "0.2"

[dev-dependencies]
criterion = "0.5"
tempfile = "3"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }

[[bench]]
name = "matching_bench"
harness = false

[[bench]]
name = "process_order_bench"
harness = false

[[bench]]
name = "match_n_levels_bench"
harness = false

[[bench]]
name = "wal_replay_bench"
harness = false
