[package]
name = "rsx-matching"
version = "0.2.0"
edition = "2021"

[dependencies]
rsx-types = { path = "../rsx-types" }
rsx-log = { path = "../rsx-log" }
rsx-book = { path = "../rsx-book" }
rsx-cast = { path = "../rsx-cast" }
rsx-messages = { path = "../rsx-messages" }
rsx-health = { path = "../rsx-health" }
rustc-hash = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-postgres = "0.7"
libc = "0.2"

[features]
# Compile in the per-stage latency trace (latency_sample! macro). Off by
# default = zero hot-path cost. Build with --features latency-trace to profile.
latency-trace = []

[dev-dependencies]
criterion = "0.5"
core_affinity = "0.8"
tempfile = "3"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }

[[bench]]
name = "matching_bench"
harness = false

[[bench]]
name = "process_order_bench"
harness = false

[[bench]]
name = "match_n_levels_bench"
harness = false

[[bench]]
name = "wal_replay_bench"
harness = false
