[project]
name = "rsx-playground"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sse-starlette",
    "psutil",
    "jinja2",
    "asyncpg",
    "python-multipart",
    "pytest",
    "aiohttp",
    "httpx",
    "pyjwt",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
