[package]
name = "rsx-recorder"
version = "0.2.0"
edition = "2021"

[dependencies]
rsx-cast = { path = "../rsx-cast" }
rsx-types = { path = "../rsx-types" }
rsx-messages = { path = "../rsx-messages" }
rsx-health = { path = "../rsx-health" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
