[package]
name = "rsx-stress"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rsx-stress"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
hdrhistogram = "7"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
rand = "0.8"
anyhow = "1"
