[package]
name = "rsx-tui"
version = "0.1.0"
edition = "2021"

# The RSX trading terminal. ratatui (re-exports crossterm) is the UI dep;
# quinn + tokio + rustls back the QUIC client transport (QuicConn), the
# sole client<->gateway leg. prost encodes the protobuf frame bodies;
# jsonwebtoken + serde mint the HS256 JWT sent in the auth first-frame.
# Internal casting (rsx-cast) is a separate transport and is not a dep here.
[dependencies]
ratatui = "0.29"
quinn = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "net"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
webpki-roots = "0.26"
prost = "0.14"
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
rcgen = "0.13"
